websvc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: web.vicsnr.com
  creationTimestamp: null
  labels:
    run: web-server
  name: web-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web-server
  sessionAffinity: None
  type: ClusterIP
